--- a/family.html
+++ b/family.html
@@ -9,8 +9,8 @@
 <header>
 	<nav>
 		<ol>
-		<li> <a href="https://dylancanete.github.io/homework1/homework1/index.html">About</a> </li>
-		<li> <a href="https://dylancanete.github.io/homework1/homework1/family.html">Family</a> </li>
+		<li> <a href="https://dylancanete.github.io/homework1/index.html">About</a> </li>
+		<li> <a href="https://dylancanete.github.io/homework1/family.html">Family</a> </li>
 		</ol>
 	</nav>
 </header>
