--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header>
 	<nav>
 		<ol>
-		<li> <a href="https://dylancanete.github.io/homework1/index.html">About</a> </li>
-		<li> <a href="https://dylancanete.github.io/homework1/family.html">Family</a> </li>
+		<li> <a href="https://dylancanete.github.io/homework_1/index.html">About</a> </li>
+		<li> <a href="https://dylancanete.github.io/homework_1/family.html">Family</a> </li>
 		</ol>
 	</nav>
 </header>
